--- a/src/main/resources/templates/readingList.html
+++ b/src/main/resources/templates/readingList.html
@@ -1,11 +1,47 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
-    <title>Getting Started: Handling Form Submission</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Reading list</title>
+    <link rel="stylesheet" th:href="@{/style.css}"></link>
 </head>
 <body>
-<h1>Books</h1>
+    <h2>Your Reading List</h2>
+<div th:unless="${#lists.isEmpty(books)}">
+    <dl th:each="book : ${books}">
+        <dt class="bookHeadline">
+            <span th:text="${book.title}">Title</span> by
+            <span th:text="${book.author}">Author</span>
+            (ISBN: <span th:text="${book.isbn}">ISBN</span>)
+        </dt>
+        <dd class="bookDescription">
+          <span th:if="${book.description}"
+                th:text="${book.description}">Description</span>
+            <span th:if="${book.description eq null}">
+            No description available</span>
+        </dd>
+    </dl>
+</div>
+<div th:if="${#lists.isEmpty(books)}">
+    <p>You have no books in your book list</p>
+</div>
+
+<hr/>
+
+<h3>Add a book</h3>
+<form method="POST">
+    <label for="title">Title:</label>
+     <input type="text" name="title" size="50"></input><br/>
+    <label for="author">Author:</label>
+     <input type="text" name="author" size="50"></input><br/>
+    <label for="isbn">USBN:</label>
+     <input type="text" name="ISBN:" size="15"></input><br/>
+    <label for="description">Description:</label><br/>
+        <textarea name="Description:" cols="80" rows="5">
+        </textarea><br/>
+    <input type="submit"></input>
+
+</form>
+
 
 </body>
 </html>
