--- a/src/main/resources/templates/readingList.html
+++ b/src/main/resources/templates/readingList.html
@@ -9,15 +9,15 @@
 <div th:unless="${#lists.isEmpty(books)}">
     <dl th:each="book : ${books}">
         <dt class="bookHeadline">
-            <span th:text="${book.title}">Title</span> by
-            <span th:text="${book.author}">Author</span>
-            (ISBN: <span th:text="${book.isbn}">ISBN</span>)
+            <span th:text="${book.title}">Title:</span> by
+            <span th:text="${book.author}">Author:</span>
+            (ISBN: <span th:text="${book.isbn}">ISBN:</span>)
         </dt>
         <dd class="bookDescription">
-          <span th:if="${book.description}"
-                th:text="${book.description}">Description</span>
-            <span th:if="${book.description eq null}">
-            No description available</span>
+          Description: <span th:if="${book.description}"
+                th:text="${book.description}">Description:</span>
+            <span th:if="${book.description eq '' }">
+                No description available</span>
         </dd>
     </dl>
 </div>
@@ -33,13 +33,11 @@
      <input type="text" name="title" size="50"></input><br/>
     <label for="author">Author:</label>
      <input type="text" name="author" size="50"></input><br/>
-    <label for="isbn">USBN:</label>
-     <input type="text" name="ISBN:" size="15"></input><br/>
+    <label for="isbn">ISBN:</label>
+    <input type="text" name="isbn" size="15"></input><br/>
     <label for="description">Description:</label><br/>
-        <textarea name="Description:" cols="80" rows="5">
-        </textarea><br/>
+    <textarea name="description" cols="80" rows="5"></textarea><br/>
     <input type="submit"></input>
-
 </form>
 
 
